updated cat image and borders

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 <h1>My name is <%= @name %></h1>
 <h2>My age is  <%= @age %></h2>
-<div style='border: 10px black solid; width: 456px; height: 275px;'>
-  <img src='http://bit.ly/1eze8aE' />
+<div style='border: 10px black solid; width: 480px; height: 360px;'>
+  <img src='http://static4.uk.businessinsider.com/image/5654ba63dd0895032a8b4660-480/hamilton.jpg' />
  </div>
  <% if !@name %>
  <form action='/named-cat' style="margin-top: 20px;">
